Fix whitespace

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ html, body {
 }
 
 #chats {
-  max-height: calc(100% - 5.5rem);
+  max-height: calc(100% - 3.5rem);
   overflow-y: auto;
   .avatar {
     max-width: 40px;
